objects/Mathworks__c.object
<CustomObject>
    <fields>
        <fullName>Mathworks_picklist__c</fullName>
        <label>Mathworks picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mathworks_text__c</fullName>
        <label>Mathworks text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test</description>
        <label>Test Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Number__c</fullName>
        <description>Test field</description>
        <label>Test Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mathworks</label>
    <nameField>
        <label>Mathworks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mathworkss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>